хедер, общие эелементы, приветствие (частично)

--- a/ea-vkks-web/src/main/earh/app.json
+++ b/ea-vkks-web/src/main/earh/app.json
@@ -41,6 +41,10 @@
 			"bootstrap": false
         },
         {
+            "path": "resources/css/icons.css",
+			"bootstrap": false
+        },
+        {
             "path": "resources/css/TextLayerBuilder.css",
 			"bootstrap": false
         },
