--- a/ea-vkks-web/src/main/login/app.json
+++ b/ea-vkks-web/src/main/login/app.json
@@ -39,6 +39,10 @@
             "path": "resources/css/login_clear.css",
 			"bootstrap": false
         },
+        {
+            "path": "resources/css/icons.css",
+			"bootstrap": false
+        },
 		{
 			"path": "bootstrap.css",
 			"bootstrap": true
