--- a/ea-vkks-web/src/main/earh/app.json
+++ b/ea-vkks-web/src/main/earh/app.json
@@ -41,7 +41,7 @@
 			"bootstrap": false
 		},
 		{
-			"path": "resources/css/icons.css",
+			"path": "resources/css/icons_app.css",
 			"bootstrap": false
 		},
 		{
