--- a/ea-vkks-web/pom.xml
+++ b/ea-vkks-web/pom.xml
@@ -51,7 +51,7 @@
         <dependency>
             <groupId>ru.insoft.archive</groupId>
             <artifactId>ext-commons</artifactId>
-            <version>0.1.1</version>
+            <version>0.1.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
