--- a/ea-vkks-web/pom.xml
+++ b/ea-vkks-web/pom.xml
@@ -60,8 +60,20 @@
             <version>1.1</version>
             <scope>provided</scope>
         </dependency>
-
-
+        
+        <!--<dependency>
+            <groupId>org.jboss.weld.se</groupId>
+            <artifactId>weld-se</artifactId>
+            <version>2.1.0.CR1</version>
+            <type>jar</type>
+        </dependency>-->
+        
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+        
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
