--- a/ea-vkks-web/src/main/webapp/WEB-INF/web.xml
+++ b/ea-vkks-web/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 			<url-pattern>/index.html</url-pattern>
 			<url-pattern>/app.json</url-pattern>
 			<url-pattern>/app.js</url-pattern>
-			<!--<url-pattern>/srvcs/*</url-pattern>-->
+			<url-pattern>/srvcs/*</url-pattern>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>*</role-name>
@@ -26,7 +26,7 @@
 		</form-login-config>
 	</login-config>
 	<session-config>
-		<session-timeout>30</session-timeout>
+		<session-timeout>-1</session-timeout>
 	</session-config>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
