--- a/ea-vkks-web/pom.xml
+++ b/ea-vkks-web/pom.xml
@@ -47,12 +47,12 @@
 			<version>1.0-SP1</version>
 			<scope>provided</scope>
 		</dependency>
-        
-                <dependency>
-                    <groupId>org.elasticsearch</groupId>
-                    <artifactId>elasticsearch</artifactId>
-                    <version>1.3.2</version>
-                </dependency>
+
+		<dependency>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch</artifactId>
+			<version>1.3.2</version>
+		</dependency>
 
 		<dependency>
 			<groupId>ru.insoft.archive</groupId>
@@ -65,6 +65,12 @@
 			<artifactId>jta</artifactId>
 			<version>1.1</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20090211</version>
+			<type>jar</type>
 		</dependency>
 		<dependency>
 			<groupId>javax</groupId>
@@ -140,8 +146,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.6</source>
+					<target>1.6</target>
 					<compilerArguments>
 						<endorseddirs>${endorsed.dir}</endorseddirs>
 					</compilerArguments>
