--- a/ea-vkks-web/pom.xml
+++ b/ea-vkks-web/pom.xml
@@ -53,6 +53,12 @@
                     <artifactId>elasticsearch</artifactId>
                     <version>1.3.2</version>
                 </dependency>
+                
+                <dependency>
+                    <groupId>org.javatuples</groupId>
+                    <artifactId>javatuples</artifactId>
+                    <version>1.2</version>
+                </dependency>
 
 		<dependency>
 			<groupId>ru.insoft.archive</groupId>
