файл для верстки под все браузеры

--- a/ea-vkks-web/src/main/earh/app.json
+++ b/ea-vkks-web/src/main/earh/app.json
@@ -44,6 +44,10 @@
 			"bootstrap": false
 		},
 		{
+			"path": "resources/css/crossbrousers.css",
+			"bootstrap": false
+		},
+		{
 			"path": "bootstrap.css",
 			"bootstrap": true
 		}
