Отображение карточки документа

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /ea-vkks-web/src/main/earh/nbproject/private/
 /ea-vkks-web/src/main/login/nbproject/private/
+/ea-vkks-web/src/main/earhnb/nbproject/private/
