--- a/vkks.lighttpd.conf
+++ b/vkks.lighttpd.conf
@@ -1,7 +1,7 @@
-var.basedir = "/home/basa/Projects/ea-vkks/ea-vkks-web/src/main/"
+var.vkksdir = "/home/basa/Projects/ea-vkks/ea-vkks-web/src/main/"
 $HTTP["host"] == "vkks" {
-    server.document-root = basedir + "earh/"
-    alias.url = ("/webapp/" => basedir + "webapp/")
+    server.document-root = vkksdir + "earh/"
+    alias.url = ("/webapp/" => vkksdir + "webapp/")
     $HTTP["url"] =~ "^/(ea-vkks-web|arm-admin)" {
         proxy.server = ("" => (
             (
