--- a/ea-vkks-web/pom.xml
+++ b/ea-vkks-web/pom.xml
@@ -60,6 +60,12 @@
             <artifactId>javatuples</artifactId>
             <version>1.2</version>
         </dependency>
+        
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
 
 		<dependency>
 			<groupId>ru.insoft.archive</groupId>
