--- a/ea-vkks-web/pom.xml
+++ b/ea-vkks-web/pom.xml
@@ -34,6 +34,14 @@
 			<version>1.0.2.Final</version>
 			<scope>provided</scope>
 		</dependency>
+                
+                <dependency>
+                        <groupId>org.picketbox</groupId>
+                        <artifactId>picketbox</artifactId>
+                        <version>4.1.1.Final</version>
+                        <scope>provided</scope>
+                </dependency>
+
 
 		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
