--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project>
+<project xmlns:pom="http://maven.apache.org/POM/4.0.0">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ru.insoft.archive</groupId>
 	<version>1.0.1</version>
@@ -19,6 +19,16 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
+	 <plugins>
+	  <plugin>
+	   <groupId>org.apache.maven.plugins</groupId>
+	   <artifactId>maven-compiler-plugin</artifactId>
+	   <version>2.3.2</version>
+	   <configuration>
+	    <debug>false</debug>
+	   </configuration>
+	  </plugin>
+	 </plugins>
 	</build>
 
   <modules>
