--- a/ea-vkks-web/pom.xml
+++ b/ea-vkks-web/pom.xml
@@ -178,7 +178,7 @@
 					<compilerArguments>
 						<endorseddirs>${endorsed.dir}</endorseddirs>
 					</compilerArguments>
-				 <debug>false</debug>
+				 <debug>true</debug>
 				</configuration>
 			</plugin>
 			<plugin>
